# abz_agency

./: .env  Makefile  db.sqlite3  pyproject.toml
employees/: settings.py  urls.py
employees/staff/: apps.py  models.py  urls.py  views.py
employees/staff/management/commands/: seed.py
employees/staff/migrations/: 0001_initial.py  0002_rename_supervisor_staff_boss.py
employees/templates/: base.html  tree.html
